added pixelated cursor

--- a/assets/css/bootstrap-styles.css
+++ b/assets/css/bootstrap-styles.css
@@ -17354,5 +17354,5 @@ img-comparison-slider:focus {
 }
 
 body {
-    cursor: url('/assets/img/custom-cursor.png'), auto;
+    cursor: url('https://boolean-autocrat.github.io/Parallax-Engine-LVISN/assets/custom-cursor.png'), auto;
 }
