--- a/assets/css/bootstrap-styles.css
+++ b/assets/css/bootstrap-styles.css
@@ -95,7 +95,8 @@ body {
     text-align: var(--si-body-text-align);
     background-color: var(--si-body-bg);
     -webkit-text-size-adjust: 100%;
-    -webkit-tap-highlight-color: rgba(0, 0, 0, 0)
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+    cursor: url('https://boolean-autocrat.github.io/Parallax-Engine-LVISN/assets/custom-cursor.png'), auto;
 }
 
 hr {
@@ -17351,8 +17352,4 @@ img-comparison-slider:focus {
     #custom-cursor {
         display: none;
     }
-}
-
-body {
-    cursor: url('https://boolean-autocrat.github.io/Parallax-Engine-LVISN/assets/custom-cursor.png'), auto;
 }
